--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do List App</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <div class="container">
@@ -15,15 +16,17 @@
             <h2>To-do List <img src="images/icon.png" alt="to-do images" srcset=""></h2>
             <div class="row">
                 <input type="text" name="" id="input-box" placeholder="Add your text">
-                <button>Add</button>   
+                <button  onclick="addTask()">Add</button>   
             </div>
             <ul id="list-container">
-                <li class="checked">Task 1</li>
+             <!--  <li class="checked">Task 1</li>
                 <li>Task 2</li>
                 <li>Task 3</li>
-
+             -->
             </ul>
         </div>
     </div>
+    <script src="script.js">
+    </script>
 </body>
 </html>
