Update: Fixed Responsiveness

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
-    
+
 </head>
+
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>To-do List <img src="images/icon.png" alt="to-do images" srcset=""></h2>
+            <div class="todo">
+                <h2>To-do List <img src="images/icon.png" alt="to-do images" srcset=""></h2>
+            </div>
             <div class="row">
                 <input type="text" name="" id="input-box" placeholder="Add your text">
-                <button  onclick="addTask()">Add</button>   
+                <button id="addbtn" onclick="addTask()">Add</button>
             </div>
             <ul id="list-container">
-             <!--  <li class="checked">Task 1</li>
+                <!--  <li class="checked">Task 1</li>
                 <li>Task 2</li>
                 <li>Task 3</li>
              -->
@@ -29,4 +33,5 @@
     <script src="script.js">
     </script>
 </body>
+
 </html>
